# zkfold-prover-api

./: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  cabal.project  hie.yaml  openapi.json  zkfold-prover-api.cabal
app/: Main.hs
examples/: simple-witness.json
src/: Server.hs
src/API/: Prove.hs
src/Handlers/: ProveHandler.hs
src/Types/: Instances.hs  ZkProof.hs
src/ZkFold/Prover/API/: Server.hs
src/ZkFold/Prover/API/Types/: Args.hs  ZkProof.hs
