cabal-version:      3.0
name:               zkfold-prover-api
version:            0.1.0.0
synopsis:           ZkFold's prover backend API for constructing ZK proofs
homepage:           https://zkfold.io/
license:            MIT
license-file:       LICENSE
author:             Vardominator
maintainer:         vbarsegyan@gomaestro.org
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
  hs-source-dirs:      src
  exposed-modules:     Server
                     , API.Prove
                     , Handlers.ProveHandler
                     , Types.ZkProof
                     , Types.Instances
  build-depends:       base ^>=4.18.1.0 && <5
                     , servant
                     , servant-server
                     , aeson
                     , bytestring
                     , text
                     , deepseq
                     , generic-deriving
                     , QuickCheck
                     , cryptohash-sha256
                     , base64-bytestring
                     , warp
                     , zkfold-base
  default-language:    Haskell2010

executable zkfold-prover-api
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.18.1.0 && <5
                    , zkfold-prover-api
                    , aeson
                    , bytestring
                    , base64-bytestring
                    , text
                    , warp
    default-language: Haskell2010
