cabal-version:      3.0
name:               zkfold-prover-api
version:            0.1.0.0
synopsis:           ZkFold's prover backend API for constructing ZK proofs
homepage:           https://zkfold.io/
license:            MIT
license-file:       LICENSE
author:             Vardominator, Murat Kasimov, Ilya Barishnikov, Vladimir Sinyakov
maintainer:         vlasin@zkfold.io
build-type:         Simple
extra-doc-files:    CHANGELOG.md

Flag Pedantic
    Description: Enable pedantic build with -Werror
    Manual: True
    Default: False

common options
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wnoncanonical-monad-instances
      -Wpartial-fields
      -Wredundant-constraints
      -O2
    if flag(pedantic)
      ghc-options:
        -Werror
    default-extensions:
      BangPatterns,
      BinaryLiterals,
      ConstraintKinds,
      DataKinds,
      DefaultSignatures,
      DeriveDataTypeable,
      DeriveFoldable,
      DeriveFunctor,
      DeriveGeneric,
      DeriveTraversable,
      ExistentialQuantification,
      FlexibleContexts,
      FlexibleInstances,
      FunctionalDependencies,
      GADTs,
      GeneralizedNewtypeDeriving,
      InstanceSigs,
      KindSignatures,
      LambdaCase,
      MultiParamTypeClasses,
      MultiWayIf,
      NamedFieldPuns,
      NoImplicitPrelude,
      NoStarIsType,
      NumericUnderscores,
      OverloadedStrings,
      OverloadedLabels,
      PolyKinds,
      RankNTypes,
      RecordWildCards,
      ScopedTypeVariables,
      StandaloneDeriving,
      StandaloneKindSignatures,
      TupleSections,
      TypeApplications,
      TypeFamilies,
      ViewPatterns

library
  import:              options
  
  exposed-modules:     ZkFold.Prover.API.Server
                     , ZkFold.Prover.API.Types.Args
                     , ZkFold.Prover.API.Types.ZkProof
  build-depends:       base ^>=4.18.1.0 && <5
                     , servant
                     , servant-server
                     , servant-swagger
                     , servant-swagger-ui
                     , swagger2
                     , aeson
                     , bytestring
                     , text
                     , lens
                     , deepseq
                     , generic-deriving
                     , QuickCheck
                     , cryptohash-sha256
                     , base64-bytestring
                     , warp
                     , katip
                     , zkfold-base
  hs-source-dirs:      src

executable zkfold-prover-api
    import:           options
    main-is:          Main.hs
    build-depends:    base ^>=4.18.1.0 && <5
                    , zkfold-prover-api
                    , aeson
                    , bytestring
                    , base64-bytestring
                    , text
                    , warp
                    , katip
    hs-source-dirs:   app
